feat: grid of items in category page

--- a/item-page.html
+++ b/item-page.html
@@ -4,7 +4,7 @@
     <title>About</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-    <meta name="description" content="my portfolio" />
+    <meta name="description" content="item page" />
     <link
       href="https://fonts.googleapis.com/css2?family=Space%20Grotesk:wght@400;700&display=swap:"
       rel="stylesheet"
