feat: columns for artist page

--- a/artist-page.html
+++ b/artist-page.html
@@ -4,7 +4,7 @@
     <title>About</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-    <meta name="description" content="my portfolio" />
+    <meta name="description" content="category page" />
     <link
       href="https://fonts.googleapis.com/css2?family=Space%20Grotesk:wght@400;700&display=swap:"
       rel="stylesheet"
@@ -37,61 +37,94 @@
       </div>
     </div>
 
-    <div class="content">
+    <div style="margin-left: 4rem">
+      <h1>Accessories</h1>
+    </div>
+
+    <div class="category-content">
       <div class="animated">
         <section
           style="
             text-underline-position: under;
             display: flex;
             margin-bottom: 7rem;
-            margin-left: 5rem;
+            margin-left: 6rem;
+            justify-content: start;
+            flex-wrap: wrap;
+            flex-direction: row;
           "
         >
-          <img
-            class="card-image"
-            src="mock-images/pearl earrings 4.png"
-            alt="headshot"
-          />
-          <div
-            style="
-              max-width: 26rem;
-              background-color: #f8f8f8;
-              padding: 2rem;
-              border-radius: 10px;
-            "
-            class="about"
-          >
-            <div class="profile-container">
-              <img
-                src="mock-images/test-headshot.png"
-                alt="Profile Photo"
-                class="profile-photo"
-              />
-              <a href="item-page.html">Marissa Tam</a>
-            </div>
-
-            <h2 style="margin: 0rem">
-              Handcrafted Pearl Earrings on Gold Hoops
-            </h2>
-            <h3 style="margin: 0rem">$20.00</h3>
-            <p style="margin-bottom: 0.8rem">
-              These pearl earrings are handcrafted, combining the simplicity of
-              gold hoops with the elegance of pearls. The design is minimalist,
-              focusing on the natural beauty of the materials. Ideal for adding
-              a touch of elegance to any outfit, these earrings are versatile
-              and suitable for various occasions.
-            </p>
-            <hr />
-            <p><b>Contact</b></p>
-            <p>
-              💌 &nbsp;<a href="mailto:marissa_tam@brown.edu"
-                >marissa_tam@brown.edu</a
+          <div class="card">
+            <a href="item-page.html"
+              ><img class="card-image" src="mock-images/pearl earrings 4.png"
+            /></a>
+            <div class="card-desc">
+              <a class="case-links" href="item-page.html"
+                ><p><span style="color: #303030">Pearl Earrings</span></p></a
               >
-            </p>
-            <p>📞 &nbsp;<a href="tel:+123-456-7890">123-456-7890</a></p>
-            <p>
-              IG: &nbsp;<a href="https://www.instagram.com/">@marissa_tam</a>
-            </p>
+              <p2>$20 • by Marissa Tam </p2>
+            </div>
+          </div>
+          <div class="card">
+            <a href="item-page.html"
+              ><img class="card-image" src="mock-images/pearl earrings 4.png"
+            /></a>
+            <div class="card-desc">
+              <a class="case-links" href="item-page.html"
+                ><p><span style="color: #303030">Pearl Earrings</span></p></a
+              >
+              <p2>$20 • by Marissa Tam </p2>
+            </div>
+          </div>
+          <div class="card">
+            <a href="item-page.html"
+              ><img class="card-image" src="mock-images/pearl earrings 4.png"
+            /></a>
+            <div class="card-desc">
+              <a class="case-links" href="item-page.html"
+                ><p><span style="color: #303030">Pearl Earrings</span></p></a
+              >
+              <p2>$20 • by Marissa Tam </p2>
+            </div>
+          </div>
+          <div class="card">
+            <a href="item-page.html"
+              ><img class="card-image" src="mock-images/pearl earrings 4.png"
+            /></a>
+            <div class="card-desc">
+              <a class="case-links" href="item-page.html"
+                ><p>
+                  <span style="color: #303030"> Pearl Earrings</span>
+                </p></a
+              >
+              <p2>$20 • by Marissa Tam</p2>
+            </div>
+          </div>
+          <div class="card">
+            <a href="item-page.html"
+              ><img class="card-image" src="mock-images/pearl earrings 4.png"
+            /></a>
+            <div class="card-desc">
+              <a class="case-links" href="item-page.html"
+                ><p>
+                  <span style="color: #303030"> Pearl Earrings</span>
+                </p></a
+              >
+              <p2>$20 • by Marissa Tam</p2>
+            </div>
+          </div>
+          <div class="card">
+            <a href="item-page.html"
+              ><img class="card-image" src="mock-images/pearl earrings 4.png"
+            /></a>
+            <div class="card-desc">
+              <a class="case-links" href="item-page.html"
+                ><p>
+                  <span style="color: #303030"> Pearl Earrings</span>
+                </p></a
+              >
+              <p2>$20 • by Marissa Tam</p2>
+            </div>
           </div>
         </section>
       </div>
