--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/components/App.tsx"></script>
+    <script type="module" src="/src/components/main.tsx"></script>
   </body>
 </html>
