feat: artist page foundation

--- a/artist-page.html
+++ b/artist-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About</title>
+    <title>Artist Page</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <meta name="description" content="category page" />
@@ -37,8 +37,23 @@
       </div>
     </div>
 
-    <div style="margin-left: 4rem">
-      <h1>Accessories</h1>
+    <div class="artist-container">
+      <img
+        class="full-width"
+        src="mock-images/background.png"
+        alt="cats-in-grass"
+      />
+      <div style="background: rgba(255, 255, 255, 0.3)" class="centered">
+        <h1>Marissa's Shop</h1>
+        <p><b>Contact</b></p>
+        <p>
+          💌 &nbsp;<a href="mailto:marissa_tam@brown.edu"
+            >marissa_tam@brown.edu</a
+          >
+        </p>
+        <p>📞 &nbsp;<a href="tel:+123-456-7890">123-456-7890</a></p>
+        <p>IG: &nbsp;<a href="https://www.instagram.com/">@marissa_tam</a></p>
+      </div>
     </div>
 
     <div class="category-content">
