pushing to pull

--- a/artist-page.html
+++ b/artist-page.html
@@ -37,9 +37,22 @@
       </div>
     </div>
 
-    <div style="margin-left: 4rem">
-      <h1>Accessories</h1>
+    <div style="margin-left: 8rem;">
+      <h1>Welcome to The Shop.</h1>
+       <p><b>Contact</b></p>
+            <p>
+              💌 &nbsp;<a href="mailto:marissa_tam@brown.edu"
+                >marissa_tam@brown.edu</a
+              >
+            </p>
+            <p>📞 &nbsp;<a href="tel:+123-456-7890">123-456-7890</a></p>
+            <p>
+              IG: &nbsp;<a href="https://www.instagram.com/">@marissa_tam</a>
+            </p>
+          </div>
     </div>
+
+    <hr>
 
     <div class="category-content">
       <div class="animated">
