--- a/category-page.html
+++ b/category-page.html
@@ -1,139 +1,154 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>About</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-    <meta name="description" content="category page" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space%20Grotesk:wght@400;700&display=swap:"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/7a616d3413.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+    <meta name="description" content="my portfolio" />
+    <link href="https://fonts.googleapis.com/css2?family=Space%20Grotesk:wght@400;700&display=swap:" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/7a616d3413.js" crossorigin="anonymous"></script>
+</head>
 
-  <body>
+<body>
     <div class="header">
-      <a style="color: #303030" href="home.html">Artist's Corner PVD</a>
-      <div class="search-container">
-        <form action="/action_page.php">
-          <input type="text" placeholder="Search..." name="search" />
-          <button type="submit"><i class="fa fa-search"></i></button>
-        </form>
-      </div>
+        <a style="color: #303030" href="home.html">Artist's Corner PVD</a>
+        <div class="search-container">
+            <form action="/action_page.php">
+                <input type="text" placeholder="Search..." name="search" />
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+        </div>
     </div>
     <div class="topnav">
-      <div class="right-links">
-        <a href="accessories.html">Accessories</a>
-        <a href="apparel.html">Apparel</a>
-        <a href="artwork.html">Artwork</a>
-        <a href="crafts.html">Crafts</a>
-        <a href="misc.html">Misc.</a>
-        <a href="events.html">Events</a>
-        <a href="about.html">About</a>
-      </div>
+        <div class="right-links">
+            <a href="accessories.html">Accessories</a>
+            <a href="apparel.html">Apparel</a>
+            <a href="artwork.html">Artwork</a>
+            <a href="crafts.html">Crafts</a>
+            <a href="misc.html">Misc.</a>
+            <a href="events.html">Events</a>
+            <a href="about.html">About</a>
+        </div>
     </div>
 
-    <div style="margin-left: 4rem">
-      <h1>Accessories</h1>
-    </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-    <div class="category-content">
-      <div class="animated">
-        <section
-          style="
-            text-underline-position: under;
-            display: flex;
-            margin-bottom: 7rem;
-            margin-left: 6rem;
-            justify-content: start;
-            flex-wrap: wrap;
-            flex-direction: row;
-          "
-        >
-          <div class="card">
-            <a href="item-page.html"
-              ><img class="card-image" src="mock-images/pearl earrings 4.png"
-            /></a>
-            <div class="card-desc">
-              <a class="case-links" href="item-page.html"
-                ><p><span style="color: #303030">Pearl Earrings</span></p></a
-              >
-              <p2>$20 • by Marissa Tam </p2>
-            </div>
-          </div>
-          <div class="card">
-            <a href="item-page.html"
-              ><img class="card-image" src="mock-images/pearl earrings 4.png"
-            /></a>
-            <div class="card-desc">
-              <a class="case-links" href="item-page.html"
-                ><p><span style="color: #303030">Pearl Earrings</span></p></a
-              >
-              <p2>$20 • by Marissa Tam </p2>
-            </div>
-          </div>
-          <div class="card">
-            <a href="item-page.html"
-              ><img class="card-image" src="mock-images/pearl earrings 4.png"
-            /></a>
-            <div class="card-desc">
-              <a class="case-links" href="item-page.html"
-                ><p><span style="color: #303030">Pearl Earrings</span></p></a
-              >
-              <p2>$20 • by Marissa Tam </p2>
-            </div>
-          </div>
-          <div class="card">
-            <a href="item-page.html"
-              ><img class="card-image" src="mock-images/pearl earrings 4.png"
-            /></a>
-            <div class="card-desc">
-              <a class="case-links" href="item-page.html"
-                ><p>
-                  <span style="color: #303030"> Pearl Earrings</span>
-                </p></a
-              >
-              <p2>$20 • by Marissa Tam</p2>
-            </div>
-          </div>
-          <div class="card">
-            <a href="item-page.html"
-              ><img class="card-image" src="mock-images/pearl earrings 4.png"
-            /></a>
-            <div class="card-desc">
-              <a class="case-links" href="item-page.html"
-                ><p>
-                  <span style="color: #303030"> Pearl Earrings</span>
-                </p></a
-              >
-              <p2>$20 • by Marissa Tam</p2>
-            </div>
-          </div>
-          <div class="card">
-            <a href="item-page.html"
-              ><img class="card-image" src="mock-images/pearl earrings 4.png"
-            /></a>
-            <div class="card-desc">
-              <a class="case-links" href="item-page.html"
-                ><p>
-                  <span style="color: #303030"> Pearl Earrings</span>
-                </p></a
-              >
-              <p2>$20 • by Marissa Tam</p2>
-            </div>
-          </div>
-        </section>
-      </div>
-    </div>
+        body {
+            font-family: Verdana, sans-serif;
+            margin: 0;
+        }
 
-    <div class="footer">
-      <p style="font-size: 0.9rem">
-        Copyright © 2023 Artist's Corner PVD.&nbsp; Made with ❤️ in Providence.
-      </p>
-    </div>
-  </body>
+        .mySlides {
+            display: none;
+        }
+
+        img {
+            vertical-align: middle;
+        }
+
+        /* Slideshow container */
+        .slideshow-container {
+            width: 100%;
+            max-height: 300px;
+            position: relative;
+            margin: auto;
+        }
+
+        /* Caption text */
+        .text {
+            color: #f2f2f2;
+            font-family: 'Recoleta';
+            font-size: 80px;
+            padding: 8px 12px;
+            position: absolute;
+            bottom: 8px;
+            width: 100%;
+            text-align: center;
+        }
+
+        /* Fading animation */
+        .fade {
+            animation-name: fade;
+            animation-duration: 1.5s;
+        }
+
+        @keyframes fade {
+            from {
+                opacity: .4
+            }
+
+            to {
+                opacity: 1
+            }
+        }
+
+        /* On smaller screens, decrease text size */
+        @media only screen and (max-width: 300px) {
+            .text {
+                font-size: 11px
+            }
+        }
+
+        .upcoming-events {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 1.5rem;
+            color: #333;
+        }
+
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+      .column {
+        float: left;
+        width: 25%;
+        padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+    </style>
+
+    <body>
+
+        
+
+        <div class="footer">
+            <p style="font-size: 0.9rem">
+                Copyright © 2023 Artist's Corner PVD.&nbsp; Made with ❤️ in Providence.
+            </p>
+        </div>
+
+        <script>
+            let slideIndex = 0;
+            showSlides();
+
+            function showSlides() {
+                let i;
+                let slides = document.getElementsByClassName("mySlides");
+                for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                }
+                slideIndex++;
+                if (slideIndex > slides.length) {
+                    slideIndex = 1
+                }
+                slides[slideIndex - 1].style.display = "block";
+                setTimeout(showSlides, 5000); // Change image every 5 seconds
+            }
+        </script>
+    </body>
 </html>
