--- a/home-page.html
+++ b/home-page.html
@@ -18,7 +18,6 @@
       document.addEventListener("DOMContentLoaded", function () {
         let lastScrollTop = 0;
         let mainContent = document.querySelector(".main-content");
-        it;
         let footer = document.querySelector(".footer");
 
         window.addEventListener("scroll", function () {
@@ -128,6 +127,8 @@
         margin-top: 45px;
         font-size: 1.5rem;
         color: #333;
+        margin-top: -100px;
+        margin-left: 40px; /* Adjust this value to move the text to the right */
       }
 
       .footer {
