feat: card content centered

--- a/artist-page.html
+++ b/artist-page.html
@@ -37,7 +37,8 @@
       </div>
     </div>
 
-    <div class="artist-container">
+    <!-- how to change the height of the pic? -->
+    <div class="artist-container"> 
       <img
         class="full-width"
         src="mock-images/background.png"
@@ -64,9 +65,9 @@
           style="
             text-underline-position: under;
             display: flex;
-            margin-bottom: 7rem;
-            margin-left: 6rem;
-            justify-content: start;
+            /* margin-bottom: 7rem; */
+            /* margin-left: 6rem; */
+            justify-content: center;
             flex-wrap: wrap;
             flex-direction: row;
           "
