feat: user editing abilities

--- a/home-page.html
+++ b/home-page.html
@@ -40,7 +40,7 @@
 
   <body>
     <div class="header">
-      <a style="color: #303030" href="home.html">Artist's Corner PVD</a>
+      <a style="color: #303030" href="home-page.html">Artist's Corner PVD</a>
       <div class="search-container">
         <form action="/action_page.php">
           <input type="text" placeholder="Search..." name="search" />
