--- a/home-page.html
+++ b/home-page.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About</title>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <title>Your Website</title>  -->
+  <!-- Link to your compiled JavaScript file (app.js) -->
+  <!-- <script src="src/components/App.jsx" defer></script> -->
+   <title>About</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <meta name="description" content="my portfolio" />
@@ -35,7 +40,7 @@
           lastScrollTop = st <= 0 ? 0 : st;
         });
       });
-    </script>
+    </script> 
   </head>
 
   <body>
