feat: items showing up in accessories and crafts

--- a/artists_corner_0/frontend/web.mql.todo/index.html
+++ b/artists_corner_0/frontend/web.mql.todo/index.html
@@ -16,6 +16,11 @@
     -->
     <link rel="manifest" href="/manifest.json" />
     <title>React App</title>
+    <script>
+      if (global === undefined) {
+        var global = window;
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
