fix: deleted extra src folder

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/components/main.tsx"></script>
+    <script type="module" src="artists_corner_0\frontend\web.mql.todo\src\components\Main.tsx"></script>
   </body>
 </html>
